工作看板完成

--- a/src/global.css
+++ b/src/global.css
@@ -4,12 +4,14 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   min-height: 100vh;
 }
+
 #root {
   width: 100%;
   min-height: 100vh;
+  overflow: hidden;
 }
 *,
 *::before,
@@ -25,6 +27,7 @@ body {
 .ant-layout {
   height: 100vh !important;
   min-height: 100vh !important;
+  overflow: hidden !important;
 }
 .ant-layout-sider {
   height: 100vh !important;
